syntax = "proto3";

package purchaseorder;

option go_package = "purchaseorderpb";
option java_multiple_files = true;
option java_outer_classname = "ServiceProto";
option java_package = "com.purchaseorder";

import "document/service.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-swagger/options/annotations.proto";

// PurchaseOrderDocumentService contains all common interactions for purchaseorder documents
service DocumentService {
  rpc Create(PurchaseOrderCreatePayload) returns (PurchaseOrderResponse) {
    option (google.api.http) = {
      post: "/purchaseorder"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Creates a purchase order"
    };
  }
  rpc Update(PurchaseOrderUpdatePayload) returns (PurchaseOrderResponse) {
    option (google.api.http) = {
      put: "/purchaseorder/{identifier}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Updates a purchase order"
    };
  }
  rpc GetVersion(GetVersionRequest) returns (PurchaseOrderResponse) {
    option (google.api.http) = {
      get: "/purchaseorder/{identifier}/{version}"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Get a specific version of a purchase order"
    };
  }
  rpc Get(GetRequest) returns (PurchaseOrderResponse) {
    option (google.api.http) = {
      get: "/purchaseorder/{identifier}"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Get the current version of a purchase order"
    };
  }
}

message GetRequest {
  string identifier = 1;
}

message GetVersionRequest {
  string identifier = 1;
  string version = 2;
}

message PurchaseOrderCreatePayload {
  repeated string collaborators = 1;
  PurchaseOrderData data = 2;
}

message PurchaseOrderUpdatePayload {
  string identifier = 1;
  repeated string collaborators = 2;
  PurchaseOrderData data = 3;
  document.UpdateAccessTokenPayload access_token_payload = 4;
}

message PurchaseOrderResponse {
  ResponseHeader header = 1;
  PurchaseOrderData data = 2;
}

// ResponseHeader contains a set of common fields for most documents
message ResponseHeader {
  string document_id = 1;
  string version_id = 2;
  string state = 3;
  repeated string collaborators = 4;
  string transaction_id = 5;
}

message PurchaseOrderData {
  string po_status = 24;
  // purchase order number or reference number
  string po_number = 1;
  // name of the ordering company
  string order_name = 2;
  // street and address details of the ordering company
  string order_street = 3;
  string order_city = 4;
  string order_zipcode = 5;
  // country ISO code of the ordering company of this purchase order
  string order_country = 6;
  // name of the recipient company
  string recipient_name = 7;
  string recipient_street = 8;
  string recipient_city = 9;
  string recipient_zipcode = 10;
  // country ISO code of the receipient of this purchase order
  string recipient_country = 11;
  // ISO currency code
  string currency = 12;
  // ordering gross amount including tax
  int64 order_amount = 13;
  // invoice amount excluding tax
  int64 net_amount = 14;
  int64 tax_amount = 15;
  int64 tax_rate = 16;
  string recipient = 17;
  string order = 18;
  // contact or requester or purchaser at the ordering company
  string order_contact = 19;
  string comment = 20;
  // requested delivery date
  google.protobuf.Timestamp delivery_date = 21;
  // purchase order date
  google.protobuf.Timestamp date_created = 22;
  string extra_data = 23;
}
